--- a/app.json
+++ b/app.json
@@ -17,6 +17,7 @@
     },
     "android": {
       "package": "tanuraksha.com",
+      "googleServicesFile": "./android/app/google-services.json",
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/icon.png"
       },
