--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -88,9 +88,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.anonymous.SmartAgri'
+    namespace 'tanuraksha.com'
     defaultConfig {
-        applicationId 'com.anonymous.SmartAgri'
+        applicationId 'tanuraksha.com'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
